--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.121",
     "@types/react": "^18.3.13",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.9",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
